Changelog
=========
[Tiberiu Ichim - tiberiu.ichim@eaudeweb.ro]

1.5-dev - (unreleased)
----------------------

1.4 - (2012-11-20)
------------------
* Bug fix: add a newline in generated MANIFEST.in
  [tiberich refs #5493]

1.3 - (2012-08-29)
------------------
* Bug fix: Push tags on github when releasing new eggs
  [voineali fixes #5486]

1.2 - (2012-08-07)
------------------
* Change: make manual upload the default operation, avoids problem with
  eea eggrepo server.
  [tiberich #5356]

1.1 - (2012-08-07)
------------------
* Feature: added utility script that will simply make a package be at -dev
  version. This is useful when developing eggmonkey itself.
  [tiberich #5356]
* Bug fix: fixed handling of default domains
  [tiberich #5356]
* Bug fix: fix handling commits with git repos
  [tiberich #5356]

1.0 - (2012-07-13)
------------------
* Feature: improved output with changelog of unreleased eggs,
  so we quickly know what is in each unreleased egg.
  [demarant refs #5224]
* Change: use a different versioning strategy for increasing versions
  Now we go from 0.0.9 to 0.1.0 instead of 0.0.10
  [tiberich #5293]

0.40 - (2012-06-12)
-----------------------
* Bug fix: exit eggmonkey when not ignoring errors and there's an error
  [tiberich]

0.39 - (2012-05-21)
-----------------------
* Bug fix: fix entry point for print_unreleased_packages
  [tiberich]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

0.38 - (2012-05-21)
-----------------------
* Bug fix: don't overwrite manifest file if it exists
  [tiberich]

0.37 - (2012-05-21)
-------------------
* Bug fix: don't fail when encountering history entry line that start with
  a revision number (in format rNNN)
  [tiberich #3978]
* Feature: use zest.pocompile to compile the po files to mo
  [tiberich #5120]

0.36 - (2012-04-20)
-------------------
* Bug fix: fix scms
  [tiberich #4154]

0.35 - (2012-04-20)
-------------------
* Bug fix: fix scms
  [tiberich #4154]

0.34 - (2012-04-19)